adding paper pdf link

--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
 									</p>
 									<ul class="actions">
 										<li><a href="#" class="button small">Website</a></li>
-										<li><a href="#" class="button small">PDF</a></li>
-										<li><a href="#" class="button small">Video</a></li>
+										<li><a href="https://www.arxiv.org/pdf/2406.00887" class="button small">PDF</a></li>
+										<!-- <li><a href="#" class="button small">Video</a></li> -->
 										<li><a href="#" class="button small">Code</a></li>
 										<li><i>(Releasing Soon)</i></li>
 									</ul>
