--- a/FailureMitigation.html
+++ b/FailureMitigation.html
@@ -113,6 +113,15 @@
 
 <html>
   <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2HYEBBLV5B"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2HYEBBLV5B');
+</script>
         <title>Visual Failure Mitigation</title>
         <meta property="og:title" content="Factored 3D" />
   </head>
