added new paper new

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 									<h2>News</h2>
 								</header>
 									<ul>
+										<li><b>[July 2024]</b> : New paper on efficient data routing in small-world IoT networks submitted to IEEE ANTS 2024.</li>
 										<li><b>[June 2024]</b> : My <a href="https://www.sciencedirect.com/science/article/pii/S1568494624006173?ref=pdf_download&fr=RR-2&rr=89f67841391f91cd">paper</a> on drone docking on offshore platforms using deep-RL got accepted to Applied Soft Computing Journal.</li>
 										<li><b>[May 2024]</b> : Presented my <a href="https://arxiv.org/pdf/2309.13475.pdf">paper</a> on mitigating system-level failures in visual controllers at <a href="https://2024.ieee-icra.org/">ICRA 2024</a></a> in Yokohama, Japan.</li>
 										<li><b>[May 2024]</b> : Graduated from Indian Institute of Technology (IIT BHU) with major in Electronics Engineering.</li>
