--- a/index.html
+++ b/index.html
@@ -83,23 +83,23 @@
 									<h2>News</h2>
 								</header>
 									<ul>
-										<li><b>[July 2024]</b> : New paper on efficient data routing in small-world IoT networks submitted to IEEE ANTS 2024.</li>
-										<li><b>[June 2024]</b> : My <a href="https://www.sciencedirect.com/science/article/pii/S1568494624006173?ref=pdf_download&fr=RR-2&rr=89f67841391f91cd">paper</a> on drone docking on offshore platforms using deep-RL got accepted to Applied Soft Computing Journal.</li>
-										<li><b>[May 2024]</b> : Presented my <a href="https://arxiv.org/pdf/2309.13475.pdf">paper</a> on mitigating system-level failures in visual controllers at <a href="https://2024.ieee-icra.org/">ICRA 2024</a></a> in Yokohama, Japan.</li>
-										<li><b>[May 2024]</b> : Graduated from Indian Institute of Technology (IIT BHU) with major in Electronics Engineering.</li>
-										<li><b>[Feb 2024]</b> : Received Annenberg Fellowship by University of Southern California (USC) for PhD position in the ECE department.</li>
-										<li><b>[Jan 2024]</b> : My <a href="https://arxiv.org/pdf/2309.13475.pdf">paper</a> on mitigating system-level failures in visual controllers got accepted into <a href="https://2024.ieee-icra.org/">ICRA 2024</a></a>.</li>
-										<li><b>[Jan 2024]</b> : Selected to attend <a href="https://sites.google.com/view/researchweek24/home">Research Week with Google 2024</a>.</li>
-										<li><b>[Nov 2023]</b> : New <a href="https://www.sciencedirect.com/science/article/pii/S1568494624006173?ref=pdf_download&fr=RR-2&rr=89f67841391f91cd">paper</a> on drone docking on offshore platforms using deep-RL submitted to Applied Soft Computing Journal.</li>
+										<li><b>[July 2024]</b> : New paper on efficient data routing in small-world IoT networks submitted to <b>IEEE ANTS 2024</b>.</li>
+										<li><b>[June 2024]</b> : My <a href="https://www.sciencedirect.com/science/article/pii/S1568494624006173?ref=pdf_download&fr=RR-2&rr=89f67841391f91cd">paper</a> on drone docking on offshore platforms using deep-RL got accepted to <b>Applied Soft Computing Journal</b>.</li>
+										<li><b>[May 2024]</b> : Presented my <a href="https://arxiv.org/pdf/2309.13475.pdf">paper</a> on mitigating system-level failures in visual controllers at <b><a href="https://2024.ieee-icra.org/">ICRA 2024</a></b> in Yokohama, Japan.</li>
+										<!-- <li><b>[May 2024]</b> : Graduated from Indian Institute of Technology (IIT BHU) with major in Electronics Engineering.</li> -->
+										<!-- <li><b>[Feb 2024]</b> : Received Annenberg Fellowship by University of Southern California (USC) for PhD position in the ECE department.</li> -->
+										<li><b>[Jan 2024]</b> : My <a href="https://arxiv.org/pdf/2309.13475.pdf">paper</a> on mitigating system-level failures in visual controllers got accepted into <b><a href="https://2024.ieee-icra.org/">ICRA 2024</a></b>.</li>
+										<li><b>[Jan 2024]</b> : Attended <a href="https://sites.google.com/view/researchweek24/home">Research Week with Google 2024</a> at Google Research India, Bengaluru.</li>
+										<li><b>[Nov 2023]</b> : New <a href="https://www.sciencedirect.com/science/article/pii/S1568494624006173?ref=pdf_download&fr=RR-2&rr=89f67841391f91cd">paper</a> on drone docking on offshore platforms using deep-RL submitted to <b>Applied Soft Computing Journal</b>.</li>
 										<li><b>[Sept 2023]</b> : New <a href="https://arxiv.org/pdf/2309.13475.pdf">paper</a> on mitigating system-level failures in visual controllers is out on arxiv.</li>
 										<!-- <li><b>[Sept 2023]</b> : New <a href="https://arxiv.org/pdf/2309.13475.pdf">paper</a> on mitigating system-level failures in visual controllers submitted to ICRA 2024.</li> -->
 										<li><b>[May 2023]</b> : Started Research Internship at <a href="https://smlbansal.github.io/sia-lab/">SIA Lab, University of Southern California</a>.</li>
 										<li><b>[Jan 2023]</b> : Started Research Internship at <a href="https://carleton.ca/rncsl/">RNCSL, Carleton University</a>.</li>
-										<li><b>[Dec 2022]</b> : Appointed as Tech Lead of <a href="https://robotics-club-iit-bhu.github.io/RoboReG/">RoboReG (Robotics Research Group)</a>.</li>
+										<li><b>[Dec 2022]</b> : Appointed as Tech Lead of <a href="https://robotics-club-iit-bhu.github.io/RoboReG/">RoboReG (Robotics Research Group)</a> of IIT BHU.</li>
 										<li><b>[May 2022]</b> : Started Research Internship at <a href="https://cps.iisc.ac.in/">RBBCPS, IISc</a>.</li>
-										<li><b>[Mar 2022]</b> : Started Research Internship at 	<a href="http://islab.cwnu.ac.kr/">VAIL, CWNU</a></li>
-										<li><b>[Dec 2021]</b> : First Runner Up in AIITRA National Robotics Challenge</li>
-										<li><b>[Nov 2020]</b> : Started B.Tech in Electronics Engineering at Indian Institute of Technology (IIT BHU)</li>
+										<li><b>[Mar 2022]</b> : Started Research Internship at 	<a href="http://islab.cwnu.ac.kr/">VAIL, CWNU</a>.</li>
+										<!-- <li><b>[Dec 2021]</b> : First Runner Up in AIITRA National Robotics Challenge</li> -->
+										<li><b>[Nov 2020]</b> : Started B.Tech in Electronics Engineering at Indian Institute of Technology (IIT BHU).</li>
 									</ul>
 							</section>
 
@@ -185,14 +185,8 @@
 										<p>
 											<b>Research Intern | <a href="https://carleton.ca/hhashim/">Dr. Hashim Mohamed</a> |</b> Jan 2023 - Dec 2023 <br>
 											<!-- <i>May 2023 - Present</i> <br> -->
-											Working on developing a deep-RL based docking mechanism for VTOL UAVs on offshore platforms.
+											Worked on developing a deep-RL based docking mechanism for VTOL UAVs on offshore platforms.
 										</p>
-										<!-- <ul class="actions">
-											<li><a href="failure_mitigation" class="button small">Website</a></li>
-											<li><a href="https://arxiv.org/pdf/2309.13475.pdf" class="button small">PDF</a></li>
-											<li><a href="https://www.youtube.com/watch?v=Z9DtIEBrSvs&t=4s" class="button small">Video</a></li>
-											<li><a href="https://github.com/phoenixrider12/visual_failure_mitigation" class="button small">Code</a></li>
-										</ul> -->
 
 										<h3>Indian Institute of Science</h3>
 										<p>
@@ -200,12 +194,6 @@
 											<!-- <i>May 2023 - Present</i> <br> -->
 											Worked on multi-agent exploration using RRT-based methods and dynamic obstacle avoidance using 3D object detection.
 										</p>
-										<!-- <ul class="actions">
-											<li><a href="failure_mitigation" class="button small">Website</a></li>
-											<li><a href="https://arxiv.org/pdf/2309.13475.pdf" class="button small">PDF</a></li>
-											<li><a href="https://www.youtube.com/watch?v=Z9DtIEBrSvs&t=4s" class="button small">Video</a></li>
-											<li><a href="https://github.com/phoenixrider12/visual_failure_mitigation" class="button small">Code</a></li>
-										</ul> -->
 
 										<h3>Changwon National University</h3>
 										<p>
@@ -213,12 +201,6 @@
 											<!-- <i>May 2023 - Present</i> <br> -->
 											Worked on combining Faster R-CNN and Edge Enhanced SRGAN architectures for enhanced object detection in low resolution aerial images.
 										</p>
-										<!-- <ul class="actions">
-											<li><a href="failure_mitigation" class="button small">Website</a></li>
-											<li><a href="https://arxiv.org/pdf/2309.13475.pdf" class="button small">PDF</a></li>
-											<li><a href="https://www.youtube.com/watch?v=Z9DtIEBrSvs&t=4s" class="button small">Video</a></li>
-											<li><a href="https://github.com/phoenixrider12/visual_failure_mitigation" class="button small">Code</a></li>
-										</ul> -->
 
 									</div>
 								</div>
@@ -291,46 +273,6 @@
 												<li><a href="https://docs.google.com/presentation/d/1wgCw-pj4WYZ1QgIoMBwp1pqgJasY5RpXskZN9Sr_edU/edit?usp=sharing" class="button small">Report</a></li>
 											</ul>
 										</article>
-										<!-- <article>
-											<a href="projects/pipe_traversal_bot/" class="image"><img src="images/ptb.png" alt="" /></a>
-											<h3>Pipe Traversal Robot</h3>
-											<p>16-DoF Quadruped trained using DDPG algorithm for movement in subterranean pipes environment.</p>
-											<ul class="actions">
-												<li><a href="projects/pipe_traversal_bot/" class="button small">Website</a></li>
-												<li><a href="https://github.com/phoenixrider12/Pipe-Traversal-Bot" class="button small">Code</a></li>
-												<li><a href="https://drive.google.com/file/d/1dcmFV0audPIdikB3NqbbBkgclz0oWHxY/view?usp=drive_link" class="button small">Report</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/tic.png" alt="" /></a>
-											<h3>Thermal Image Colorization</h3>
-											<p>Infrared to RGB coversion using Pix-to-Pix GAN algorithm.</p>
-											<ul class="actions">
-												<li><a href="#" class="button small">Website</a></li>
-												<li><a href="#" class="button small">Code</a></li>
-												<li><a href="https://drive.google.com/file/d/1JKadravpzSGh7hM2-W0FOq1hFH25nDyr/view?usp=sharing" class="button small">Report</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/mosaic.png" alt="" /></a>
-											<h3>Handwritten CAPTCHA Recognition</h3>
-											<p>Detection and recognition of handwritten captchas made of alphabets and emojis.</p>
-											<ul class="actions">
-												<li><a href="#" class="button small">Website</a></li>
-												<li><a href="https://github.com/phoenixrider12/Hand-Written-CAPTCHA-Recognition" class="button small">Code</a></li>
-												<li><a href="#" class="button small">Report</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/xiota.png" alt="" /></a>
-											<h3>Automated Traffic Control System</h3>
-											<p>IoT-based solution for reducing road accidents and enhancing peoples' safety.</p>
-											<ul class="actions">
-												<li><a href="#" class="button small">Website</a></li>
-												<li><a href="https://github.com/phoenixrider12/Automated-Traffic-Control-System" class="button small">Code</a></li>
-												<li><a href="https://docs.google.com/presentation/d/1JJ--6UHFh02VZ0OyQScio4vEjmKr1QLc/edit?usp=sharing&ouid=110229048173610613882&rtpof=true&sd=true" class="button small">Report</a></li>
-											</ul>
-										</article> -->
 									</div>
 								</section>
 						</div>
