--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
 										<li><b>[July 2024]</b> : New paper on efficient data routing in small-world IoT networks submitted to <b>IEEE ANTS 2024</b>.</li>
 										<li><b>[June 2024]</b> : My <a href="https://www.sciencedirect.com/science/article/pii/S1568494624006173?ref=pdf_download&fr=RR-2&rr=89f67841391f91cd">paper</a> on drone docking on offshore platforms using deep-RL got accepted to <b>Applied Soft Computing Journal</b>.</li>
 										<li><b>[May 2024]</b> : Presented my <a href="https://arxiv.org/pdf/2309.13475.pdf">paper</a> on mitigating system-level failures in visual controllers at <b><a href="https://2024.ieee-icra.org/">ICRA 2024</a></b> in Yokohama, Japan.</li>
-										<!-- <li><b>[May 2024]</b> : Graduated from Indian Institute of Technology (IIT BHU) with major in Electronics Engineering.</li> -->
+										<li><b>[May 2024]</b> : Graduated from Indian Institute of Technology (IIT BHU) with major in Electronics Engineering.</li>
 										<!-- <li><b>[Feb 2024]</b> : Received Annenberg Fellowship by University of Southern California (USC) for PhD position in the ECE department.</li> -->
 										<li><b>[Jan 2024]</b> : My <a href="https://arxiv.org/pdf/2309.13475.pdf">paper</a> on mitigating system-level failures in visual controllers got accepted into <b><a href="https://2024.ieee-icra.org/">ICRA 2024</a></b>.</li>
 										<li><b>[Jan 2024]</b> : Attended <a href="https://sites.google.com/view/researchweek24/home">Research Week with Google 2024</a> at Google Research India, Bengaluru.</li>
-										<li><b>[Nov 2023]</b> : New <a href="https://www.sciencedirect.com/science/article/pii/S1568494624006173?ref=pdf_download&fr=RR-2&rr=89f67841391f91cd">paper</a> on drone docking on offshore platforms using deep-RL submitted to <b>Applied Soft Computing Journal</b>.</li>
-										<li><b>[Sept 2023]</b> : New <a href="https://arxiv.org/pdf/2309.13475.pdf">paper</a> on mitigating system-level failures in visual controllers is out on arxiv.</li>
+										<!-- <li><b>[Nov 2023]</b> : New <a href="https://www.sciencedirect.com/science/article/pii/S1568494624006173?ref=pdf_download&fr=RR-2&rr=89f67841391f91cd">paper</a> on drone docking on offshore platforms using deep-RL submitted to <b>Applied Soft Computing Journal</b>.</li> -->
+										<!-- <li><b>[Sept 2023]</b> : New <a href="https://arxiv.org/pdf/2309.13475.pdf">paper</a> on mitigating system-level failures in visual controllers is out on arxiv.</li> -->
 										<!-- <li><b>[Sept 2023]</b> : New <a href="https://arxiv.org/pdf/2309.13475.pdf">paper</a> on mitigating system-level failures in visual controllers submitted to ICRA 2024.</li> -->
 										<li><b>[May 2023]</b> : Started Research Internship at <a href="https://smlbansal.github.io/sia-lab/">SIA Lab, University of Southern California</a>.</li>
 										<li><b>[Jan 2023]</b> : Started Research Internship at <a href="https://carleton.ca/rncsl/">RNCSL, Carleton University</a>.</li>
@@ -371,3 +371,4 @@
 
 	</body>
 </html>
+
