--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 								<div class="content">
 									<header>
 										<h1>Hi, I’m Aryaman</h1>
-										<p><b>incoming PhD student at University of Southern California (USC) and recent graduate of Indian Institute of Technology (BHU), Varanasi. Check my recent <a href="assets/Aryaman_Research_Overview.pdf">Research</a>.</b></p>
+										<p><b>PhD student at University of Southern California (USC) and graduate of Indian Institute of Technology (BHU), Varanasi. Check my recent <a href="assets/Aryaman_Research_Overview.pdf">Research</a>.</b></p>
 									</header>
-									<p>I'm working with <a href="https://smlbansal.github.io/">Prof. Somil Bansal</a> at <a href="https://smlbansal.github.io/sia-lab/index.html">SIAL,USC</a> on <i>Providing Safety Assurances in Learning-Baed Controls of Autonomous Agents</i>.</p>
+									<p>I'm working with <a href="https://smlbansal.github.io/">Prof. Somil Bansal</a> at <a href="https://smlbansal.github.io/sia-lab/index.html">SIAL,USC</a> on <i>Providing Safety Assurances in Learning-Baed Controls for Autonomous Systems</i>.</p>
 									<p> I've previously worked with <a href="https://carleton.ca/hhashim/">Prof. Hashim Mohamed</a> on <i>Deep-RL Based Docking Mechanism for VTOL UAVs on Offshore Platforms.</i></p>
 									<!-- <p>I've previously worked with <a href="https://ece.iisc.ac.in/bharadwaj-amrutur/">Dr. Bharadwaj Amrutur</a> at <a href="https://cps.iisc.ac.in/">RBBCPS, IISc</a> on <i>Mult-Agent Exploration and Dynamic Obstacle Avoidance</i>.</p> -->
 									<p><b>My research is focussed on developing Safe Learning-Based Controls for Autonomous Agents in Safety-Critical Applications</b>.</p>
@@ -85,10 +85,10 @@
 									<ul>
 										<li><b>[July 2024]</b> : New paper on efficient data routing in small-world IoT networks submitted to <b>IEEE ANTS 2024</b>.</li>
 										<li><b>[June 2024]</b> : My <a href="https://www.sciencedirect.com/science/article/pii/S1568494624006173?ref=pdf_download&fr=RR-2&rr=89f67841391f91cd">paper</a> on drone docking on offshore platforms using deep-RL got accepted to <b>Applied Soft Computing Journal</b>.</li>
-										<li><b>[May 2024]</b> : Presented my <a href="https://arxiv.org/pdf/2309.13475.pdf">paper</a> on mitigating system-level failures in visual controllers at <b><a href="https://2024.ieee-icra.org/">ICRA 2024</a></b> in Yokohama, Japan.</li>
+										<li><b>[May 2024]</b> : Presented my <a href="https://arxiv.org/pdf/2309.13475.pdf">paper</a> on mitigating system-level failures in visual controllers at <b>ICRA 2024</b> in Yokohama, Japan.</li>
 										<li><b>[May 2024]</b> : Graduated from Indian Institute of Technology (IIT BHU) with major in Electronics Engineering.</li>
 										<!-- <li><b>[Feb 2024]</b> : Received Annenberg Fellowship by University of Southern California (USC) for PhD position in the ECE department.</li> -->
-										<li><b>[Jan 2024]</b> : My <a href="https://arxiv.org/pdf/2309.13475.pdf">paper</a> on mitigating system-level failures in visual controllers got accepted into <b><a href="https://2024.ieee-icra.org/">ICRA 2024</a></b>.</li>
+										<li><b>[Jan 2024]</b> : My <a href="https://arxiv.org/pdf/2309.13475.pdf">paper</a> on mitigating system-level failures in visual controllers got accepted into <b>ICRA 2024</b>.</li>
 										<li><b>[Jan 2024]</b> : Attended <a href="https://sites.google.com/view/researchweek24/home">Research Week with Google 2024</a> at Google Research India, Bengaluru.</li>
 										<!-- <li><b>[Nov 2023]</b> : New <a href="https://www.sciencedirect.com/science/article/pii/S1568494624006173?ref=pdf_download&fr=RR-2&rr=89f67841391f91cd">paper</a> on drone docking on offshore platforms using deep-RL submitted to <b>Applied Soft Computing Journal</b>.</li> -->
 										<!-- <li><b>[Sept 2023]</b> : New <a href="https://arxiv.org/pdf/2309.13475.pdf">paper</a> on mitigating system-level failures in visual controllers is out on arxiv.</li> -->
