--- a/index.html
+++ b/index.html
@@ -345,8 +345,8 @@
 									<ul class="contact">
 										<li class="icon solid fa-envelope">aryaman.gupta.ece20@itbhu.ac.in</li>
 										<!-- <li class="icon solid fa-phone">+91 97797-17444</li> -->
-										<li class="icon solid fa-home">33, Karan Vihar<br />
-										Karnal, Haryana, India - 132001</li>
+										<li class="icon solid fa-home">2728 Ellendale Pl<br />
+										Los Angeles, CA - 90007</li>
 									</ul>
 								</section>
 
