--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 									</header>
 									<!-- <p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p> -->
 									<ul class="contact">
-										<li class="icon solid fa-envelope">aryaman.gupta.ece20@itbhu.ac.in</li>
+										<li class="icon solid fa-envelope">aryamang@usc.edu</li>
 										<!-- <li class="icon solid fa-phone">+91 97797-17444</li> -->
 										<li class="icon solid fa-home">2728 Ellendale Pl<br />
 										Los Angeles, CA - 90007</li>
