updating phd news

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 									<h2>News</h2>
 								</header>
 									<ul>
+										<li><b>[Aug 2024]</b> : Started Ph.D. in Electrical Engineering at University of Southern California (USC).</li>
 										<li><b>[July 2024]</b> : New paper on efficient data routing in small-world IoT networks submitted to <b>IEEE ANTS 2024</b>.</li>
 										<li><b>[June 2024]</b> : My <a href="https://www.sciencedirect.com/science/article/pii/S1568494624006173?ref=pdf_download&fr=RR-2&rr=89f67841391f91cd">paper</a> on drone docking on offshore platforms using deep-RL got accepted to <b>Applied Soft Computing Journal</b>.</li>
 										<li><b>[May 2024]</b> : Presented my <a href="https://arxiv.org/pdf/2309.13475.pdf">paper</a> on mitigating system-level failures in visual controllers at <b>ICRA 2024</b> in Yokohama, Japan.</li>
@@ -99,7 +100,7 @@
 										<li><b>[May 2022]</b> : Started Research Internship at <a href="https://cps.iisc.ac.in/">RBBCPS, IISc</a>.</li>
 										<li><b>[Mar 2022]</b> : Started Research Internship at 	<a href="http://islab.cwnu.ac.kr/">VAIL, CWNU</a>.</li>
 										<!-- <li><b>[Dec 2021]</b> : First Runner Up in AIITRA National Robotics Challenge</li> -->
-										<li><b>[Nov 2020]</b> : Started B.Tech in Electronics Engineering at Indian Institute of Technology (IIT BHU).</li>
+										<li><b>[Nov 2020]</b> : Started B.Tech. in Electronics Engineering at Indian Institute of Technology (IIT BHU).</li>
 									</ul>
 							</section>
 
