--- a/failure_mitigation.html
+++ b/failure_mitigation.html
@@ -161,7 +161,8 @@
        <tr>
         <td align=center width=100px>
         <center>
-        <span style="font-size:15px"><sup>1</sup> Indian Institute of Technology (BHU), Varanasi <sup>2</sup> University of Southern California</span>
+        <span style="font-size:15px"><sup>1</sup> Indian Institute of Technology (BHU), Varanasi <sup>2</sup> University of Southern California</span><br>
+        <span style="font-size:15px"><sup>*</sup> Equal Contribution</span>
         </center>
         </td>
      </tr>
@@ -183,7 +184,7 @@
           <hr>
     <center><h1>Abstract</h1></center>
 
-            <br>
+            <!-- <br> -->
             Autonomous systems, such as self-driving cars
             and drones, have made significant strides in recent years by
             leveraging visual inputs and machine learning for decision-
@@ -208,7 +209,16 @@
             anomalies, outperforming methods such as prediction error-
             based detection, and ensembling, thereby enhancing the overall
             safety and robustness of autonomous systems.
-            <br><br>
+          <br><br>
+            <table align=center width=1000px>
+              <tr>
+                      <center>
+                        <a href=''><img class="round" style="width: 700;" src="papers/failure_mitigation/flowdiagram.png"/></a>
+                      </center>
+            </tr>
+        </table>
+
+            <br>
           <hr>
          <!-- <table align=center width=550px> -->
             <table align=center width=650>
