--- a/index.html
+++ b/index.html
@@ -346,8 +346,8 @@
 									<ul class="contact">
 										<li class="icon solid fa-envelope">aryamang@usc.edu</li>
 										<!-- <li class="icon solid fa-phone">+91 97797-17444</li> -->
-										<li class="icon solid fa-home">2728 Ellendale Pl<br />
-										Los Angeles, CA - 90007</li>
+										<li class="icon solid fa-home">3740 McClinktock Avenue<br />
+										Los Angeles, CA - 90089</li>
 									</ul>
 								</section>
 
