--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
 								<div>
 									
-									<h3> Deep Reinforcement Learning for Sim2Real Policy Transfer in VTOL-UAVs Offshore Docking Operations </h3>
+									<h3> Deep Reinforcement Learning for Sim-to-Real Policy Transfer in VTOL-UAVs Offshore Docking Operations </h3>
 									<p>
 										Ali Mohamed Ali, <b>Aryaman Gupta</b>, Hashim A.Hashim<br>
 										<b>Applied Soft Computing Journal</b>
