--- a/index.html
+++ b/index.html
@@ -340,6 +340,7 @@
 										<li><a href="index.html">Homepage</a></li>
 										<li><a href="#news">News</a></li>
 										<li><a href="#publications">Publications</a></li>
+										<li><a href="#education">Education</a></li>
 										<li><a href="#experience">Experience</a></li>
 										<li><a href="#projects">Projects</a></li>
 										<!-- <li>
