adding ants acceptance

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 									<h2>News</h2>
 								</header>
 									<ul>
+										<li><b>[Oct 2024]</b> : My paper on efficient data routing in small-world IoT networks got accepted into <b>IEEE ANTS 2024</b>.</li>
 										<li><b>[Sept 2024]</b> : New paper on failure detection and mitigation in vision-based controllers via reachability analysis submitted to <b>IEEE TRO 2024</b>.</li>
 										<li><b>[Aug 2024]</b> : Started Ph.D. in Electrical Engineering at University of Southern California (USC).</li>
 										<li><b>[July 2024]</b> : New paper on efficient data routing in small-world IoT networks submitted to <b>IEEE ANTS 2024</b>.</li>
