adding ants acceptance

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 									<h3> Node Fault Prediction Assisted Small-World IoT Networks Using ML Frameworks: Towards Performance Improvement </h3>
 									<p>
 										Neha Sharma, <b>Aryaman Gupta</b>, Sivala Deepak, Om Jee Pandey<br>
-										<b>IEEE International Conference on Advanced Networks and Telecommunications Systems (ANTS) 2024</b> <i>(Under Review)</i>
+										<b>IEEE International Conference on Advanced Networks and Telecommunications Systems (ANTS) 2024</b>
 									</p>
 									<ul class="actions">
 										<li><a href="#" class="button small">Website</a></li>
