--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 								</header>
 									<ul>
 										<li><b>[Oct 2024]</b> : My paper on efficient data routing in small-world IoT networks got accepted into <b>IEEE ANTS 2024</b>.</li>
-										<li><b>[Sept 2024]</b> : New paper on failure detection and mitigation in vision-based controllers via reachability analysis submitted to <b>IEEE TRO 2024</b>.</li>
+										<li><b>[Sept 2024]</b> : New paper on failure detection and mitigation in vision-based controllers via reachability analysis submitted to <b>IEEE T-RO</b>.</li>
 										<li><b>[Aug 2024]</b> : Started Ph.D. in Electrical Engineering at University of Southern California (USC).</li>
 										<li><b>[July 2024]</b> : New paper on efficient data routing in small-world IoT networks submitted to <b>IEEE ANTS 2024</b>.</li>
 										<li><b>[June 2024]</b> : My <a href="https://www.sciencedirect.com/science/article/pii/S1568494624006173?ref=pdf_download&fr=RR-2&rr=89f67841391f91cd">paper</a> on drone docking on offshore platforms using deep-RL got accepted to <b>Applied Soft Computing Journal</b>.</li>
@@ -172,7 +172,6 @@
 										<li><a href="#" class="button small">Website</a></li>
 										<li><a href="#" class="button small">PDF</a></li>
 										<li><a href="#" class="button small">Code</a></li>
-										<li><i>(Confidential)</i></li>
 									</ul>
 								</div>
 
