--- a/failure_mitigation_tro.html
+++ b/failure_mitigation_tro.html
@@ -30,21 +30,21 @@
   <meta property="og:type" content="video.other" />
   <meta property="og:title" content="Failure Detection and Mitigation in Vision-Based Controllers via Reachability Analysis" />
   <meta property="og:description" content="by Kaustav Chakraborty, Aryaman Gupta, Somil Bansal" />
-  <meta property="og:url" content="https://agile-but-safe.github.io/" />
-  <meta property="og:image" content="https://agile-but-safe.github.io/static/images/abs-gif-preview_1M.gif" />
-  <meta property="og:image:secure" content="https://agile-but-safe.github.io/static/images/abs-gif-preview_1M.gif" />
+  <meta property="og:url" content="https://visual-failure-mitigation.github.io/" />
+  <meta property="og:image" content="https://visual-failure-mitigation.github.io/static/images/abs-gif-preview_1M.gif" />
+  <meta property="og:image:secure" content="https://visual-failure-mitigation.github.io/static/images/abs-gif-preview_1M.gif" />
   <meta property="og:video" content="https://www.youtube.com/embed/elWwPn5IhjA" />
   <meta property="og:video:secure" content="https://www.youtube.com/embed/elWwPn5IhjA" />
   <meta property="og:image:width" content="1280" />
   <meta property="og:image:height" content="720" />
 
   <meta property="article:publisher" content="https://aryamangupta.site/" />
-  <meta name="twitter:card" content="summary_large_image" />
+  <!-- <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Failure Detection and Mitigation in Vision-Based Controllers via Reachability Analysis" />
   <meta name="twitter:description" content="by Kaustav Chakraborty, Aryaman Gupta, Somil Bansal" />
-  <meta name="twitter:url" content="https://agile-but-safe.github.io/" />
-  <meta name="twitter:image" content="https://agile-but-safe.github.io/static/images/abs-gif-preview_1M.gif" />
-  <!-- <meta name="twitter:site" content="@tairanhe99" /> -->
+  <meta name="twitter:url" content="https://visual-failure-mitigation.github.io/" />
+  <meta name="twitter:image" content="https://visual-failure-mitigation.github.io/static/images/abs-gif-preview_1M.gif" />
+  <meta name="twitter:site" content="@tairanhe99" /> -->
   <meta name="twitter:card" content="player" />
   <meta name="twitter:player" content="https://www.youtube.com/embed/elWwPn5IhjA" />
   <meta name="twitter:player:width" content="1280" />
@@ -145,7 +145,7 @@
                 </a>
               </span> -->
               <!-- twitter Link. -->
-              <span class="link-block">
+              <!-- <span class="link-block">
                 <a href="https://x.com/TairanHe99/status/1752866293118558653?s=20"
                    class="external-link button is-normal is-rounded is-dark" target="_blank">
                   <span class="icon">
@@ -153,7 +153,7 @@
                   </span>
                   <span>Summary</span>
                 </a>
-              </span>
+              </span> -->
               <!-- Code Link. -->
               <span class="link-block">
                 <a href="https://github.com/LeCAR-Lab/ABS" class="external-link button is-normal is-rounded is-dark" target="_blank">
