--- a/index.html
+++ b/index.html
@@ -140,10 +140,11 @@
 										<b>IEEE Transactions on Robotics (T-RO)</b> <i>(Under Review)</i>
 									</p>
 									<ul class="actions">
-										<li><a href="#" class="button small">Website</a></li>
-										<li><a href="#" class="button small">PDF</a></li>
+										<li><a href="https://vatsuak.github.io/visual-failure-mitigation/" class="button small">Website</a></li>
+										<li><a href="https://arxiv.org/pdf/2410.21736" class="button small">PDF</a></li>
+										<li><a href="#" class="button small">Video</a></li>
 										<li><a href="#" class="button small">Code</a></li>
-										<li><i>(Confidential)</i></li>
+										<!-- <li><i>(Confidential)</i></li> -->
 									</ul>
 								</div>
 
