adding viewer widget

--- a/index.html
+++ b/index.html
@@ -318,6 +318,9 @@
 									</div>
 								</section>
 						</div>
+
+						<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=200&t=tt&d=gdGN7pbBjfIhLvf5Wrrb7hmm8LSK-4dRrAvQft-RDFs'></script>
+
 					</div>
 
 				<!-- Sidebar -->
