adding tro video

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 									<ul class="actions">
 										<li><a href="https://vatsuak.github.io/visual-failure-mitigation/" class="button small">Website</a></li>
 										<li><a href="https://arxiv.org/pdf/2410.21736" class="button small">PDF</a></li>
-										<li><a href="#" class="button small">Video</a></li>
+										<li><a href="papers/tro_failure_mitigation/TRO_Final.mp4" class="button small">Video</a></li>
 										<li><a href="#" class="button small">Code</a></li>
 										<!-- <li><i>(Confidential)</i></li> -->
 									</ul>
