updating best paper award

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 									<h2>News</h2>
 								</header>
 									<ul>
-										<li><b>[Oct 2024]</b> : My paper on efficient data routing in small-world IoT networks got accepted into <b>IEEE ANTS 2024</b>.</li>
+										<li><b>[Oct 2024]</b> : My paper on efficient data routing in small-world IoT networks got accepted into <b>IEEE ANTS 2024</b> and won <b>Best Paper Award</b>.</li>
 										<li><b>[Sept 2024]</b> : New paper on enhancing safety and robustness of vision-based controllers via reachability analysis submitted to <b>IEEE T-RO</b>.</li>
 										<li><b>[Aug 2024]</b> : Started Ph.D. in Electrical Engineering at University of Southern California (USC).</li>
 										<li><b>[July 2024]</b> : New paper on efficient data routing in small-world IoT networks submitted to <b>IEEE ANTS 2024</b>.</li>
@@ -167,7 +167,7 @@
 									<h3> Node Fault Prediction Assisted Small-World IoT Networks Using ML Frameworks: Towards Performance Improvement </h3>
 									<p>
 										Neha Sharma, <b>Aryaman Gupta</b>, Sivala Deepak, Om Jee Pandey<br>
-										<b>IEEE International Conference on Advanced Networks and Telecommunications Systems (ANTS) 2024</b>
+										<b>IEEE International Conference on Advanced Networks and Telecommunications Systems (ANTS) 2024 [Best Paper Award]</b>
 									</p>
 									<ul class="actions">
 										<li><a href="#" class="button small">Website</a></li>
