--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 								<div class="content">
 									<header>
 										<h1>Hi, I’m Aryaman</h1>
-										<p><b>PhD student at University of Southern California (USC) and graduate of Indian Institute of Technology (BHU), Varanasi. Check my recent <a href="assets/Aryaman_Research_Overview.pdf">Research</a>.</b></p>
+										<p><b>PhD student at Stanford University and graduate of Indian Institute of Technology (BHU), Varanasi. Check my recent <a href="assets/Aryaman_Research_Overview.pdf">Research</a>.</b></p>
 									</header>
-									<p>I'm working with <a href="https://smlbansal.github.io/">Prof. Somil Bansal</a> at <a href="https://smlbansal.github.io/sia-lab/index.html">SIAL,USC</a> on <i>Providing Safety Assurances in Learning-Baed Controls for Autonomous Systems</i>.</p>
+									<p>I'm working with <a href="https://smlbansal.github.io/">Prof. Somil Bansal</a> at <a href="https://smlbansal.github.io/sia-lab/index.html">SIA Lab</a> on <i>Providing Safety Assurances in Learning-Baed Controls for Autonomous Systems</i>.</p>
 									<p> I've previously worked with <a href="https://carleton.ca/hhashim/">Prof. Hashim Mohamed</a> on <i>Deep-RL Based Docking Mechanism for VTOL UAVs on Offshore Platforms.</i></p>
 									<!-- <p>I've previously worked with <a href="https://ece.iisc.ac.in/bharadwaj-amrutur/">Dr. Bharadwaj Amrutur</a> at <a href="https://cps.iisc.ac.in/">RBBCPS, IISc</a> on <i>Mult-Agent Exploration and Dynamic Obstacle Avoidance</i>.</p> -->
 									<p><b>My research is focussed on developing Safe Learning-Based Controls for Autonomous Agents in Safety-Critical Applications</b>.</p>
@@ -83,9 +83,10 @@
 									<h2>News</h2>
 								</header>
 									<ul>
+										<li><b>[Jan 2025]</b> : Started Ph.D. in Aeronautics and Astronautics at Stanford University.</li>
 										<li><b>[Oct 2024]</b> : My paper on efficient data routing in small-world IoT networks got accepted into <b>IEEE ANTS 2024</b> and won <b>Best Paper Award</b>.</li>
 										<li><b>[Sept 2024]</b> : New paper on enhancing safety and robustness of vision-based controllers via reachability analysis submitted to <b>IEEE T-RO</b>.</li>
-										<li><b>[Aug 2024]</b> : Started Ph.D. in Electrical Engineering at University of Southern California (USC).</li>
+										<!-- <li><b>[Aug 2024]</b> : Started Ph.D. in Electrical Engineering at University of Southern California (USC).</li> -->
 										<li><b>[July 2024]</b> : New paper on efficient data routing in small-world IoT networks submitted to <b>IEEE ANTS 2024</b>.</li>
 										<li><b>[June 2024]</b> : My <a href="https://www.sciencedirect.com/science/article/pii/S1568494624006173?ref=pdf_download&fr=RR-2&rr=89f67841391f91cd">paper</a> on drone docking on offshore platforms using deep-RL got accepted to <b>Applied Soft Computing Journal</b>.</li>
 										<li><b>[May 2024]</b> : Presented my <a href="https://arxiv.org/pdf/2309.13475.pdf">paper</a> on mitigating system-level failures in visual controllers at <b>ICRA 2024</b> in Yokohama, Japan.</li>
@@ -186,12 +187,18 @@
 											<h2>Education</h2>
 										</header>
 						
-										<h3>University of Southern California</h3>
+										<h3>Stanford University</h3>
 										<p>
-											<b>Doctor of Philosophy (Ph.D.) | Electrical Engineering | August 2024 - Present </b><br>
+											<b>Doctor of Philosophy (Ph.D.) | Aeronautics and Astronautics | January 2025 - Present </b><br>
 											<!-- <i>May 2023 - Present</i> <br> -->
 											Working with <a href="https://smlbansal.github.io/">Prof. Somil Bansal</a> at <a href="https://smlbansal.github.io/sia-lab/index.html">SIA Lab</a> on performing runtime safety monitoring for output-feedback policies in autonomous systems.
 										</p>
+
+										<!-- <h3>University of Southern California</h3>
+										<p>
+											<b>Doctor of Philosophy (Ph.D.) | Electrical Engineering | August 2024 - December 2024 </b><br>
+											Working with <a href="https://smlbansal.github.io/">Prof. Somil Bansal</a> at <a href="https://smlbansal.github.io/sia-lab/index.html">SIA Lab</a> on performing runtime safety monitoring for output-feedback policies in autonomous systems.
+										</p> -->
 
 										<h3>Indian Institute of Technology (BHU) Varanasi</h3>
 										<p>
@@ -390,10 +397,10 @@
 									</header>
 									<!-- <p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p> -->
 									<ul class="contact">
-										<li class="icon solid fa-envelope">aryamang@usc.edu</li>
+										<li class="icon solid fa-envelope">aryamann@stanford.edu</li>
 										<!-- <li class="icon solid fa-phone">+91 97797-17444</li> -->
-										<li class="icon solid fa-home">3740 McClinktock Avenue<br />
-										Los Angeles, CA - 90089</li>
+										<li class="icon solid fa-home">Durand 204<br />
+										Stanford, CA - 94305</li>
 									</ul>
 								</section>
 
