--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 									<ul class="icons">
 										<li><a href="https://github.com/phoenixrider12" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 										<li><a href="https://www.linkedin.com/in/aryaman1210/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+										<li><a href="https://x.com/Aryaman1020?t=6cOr8v0Mmj7H06AsNAAIag&s=08" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									</ul>
 								</header>
 
