--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 -->
 <html>
 	<head>
+
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-2HYEBBLV5B"></script>
 <script>
@@ -58,7 +59,7 @@
 										<h1>Hi, I’m Aryaman</h1>
 										<p><b>PhD student at Stanford University and graduate of Indian Institute of Technology (BHU), Varanasi. Check my recent <a href="assets/Aryaman_Research_Overview.pdf">Research</a>.</b></p>
 									</header>
-									<p>I'm working with <a href="https://smlbansal.github.io/">Prof. Somil Bansal</a> at <a href="https://smlbansal.github.io/sia-lab/index.html">SIA Lab</a> on <i>Providing Safety Assurances in Learning-Baed Controls for Autonomous Systems</i>.</p>
+									<p>I'm working with <a href="https://smlbansal.github.io/">Prof. Somil Bansal</a> at <a href="https://smlbansal.github.io/sia-lab/index.html">SIA Lab</a> on <i>Providing Safety Assurances in Learning-Based Controls for Autonomous Systems</i>.</p>
 									<p> I've previously worked with <a href="https://carleton.ca/hhashim/">Prof. Hashim Mohamed</a> on <i>Deep-RL Based Docking Mechanism for VTOL UAVs on Offshore Platforms.</i></p>
 									<!-- <p>I've previously worked with <a href="https://ece.iisc.ac.in/bharadwaj-amrutur/">Dr. Bharadwaj Amrutur</a> at <a href="https://cps.iisc.ac.in/">RBBCPS, IISc</a> on <i>Mult-Agent Exploration and Dynamic Obstacle Avoidance</i>.</p> -->
 									<p><b>My research is focussed on developing Safe Learning-Based Controls for Autonomous Agents in Safety-Critical Applications</b>.</p>
@@ -84,6 +85,7 @@
 									<h2>News</h2>
 								</header>
 									<ul>
+										<li><b>[June 2025]</b> : New <a href="https://www.arxiv.org/abs/2506.06570">paper</a> on enhancing robot safety via MLLM-based semantic interpretation of failure data is out on arxiv.</li>
 										<li><b>[Jan 2025]</b> : Started Ph.D. in Aeronautics and Astronautics at Stanford University.</li>
 										<li><b>[Oct 2024]</b> : My paper on efficient data routing in small-world IoT networks got accepted into <b>IEEE ANTS 2024</b> and won <b>Best Paper Award</b>.</li>
 										<li><b>[Sept 2024]</b> : New paper on enhancing safety and robustness of vision-based controllers via reachability analysis submitted to <b>IEEE T-RO</b>.</li>
@@ -115,16 +117,16 @@
 									<h2>Publications</h2>
 								</header>
 
-								<!-- <div>
+								<div>
 									<p>
 									  <strong>Enhancing Robot Safety via MLLM-Based Semantic Interpretation of Failure Data</strong><br>
-									  <b>Aryaman Gupta</b>, Yusuf Umut Ciftci, Somil Bansal<br>
-									  <a href="https://arxiv.org/pdf/2410.21736" style="color: darkred;">[PDF]</a> 
+									  <b>Aryaman Gupta*</b>, Yusuf Umut Ciftci*, Somil Bansal<br>
+									  <a href="https://www.arxiv.org/abs/2506.06570" style="color: darkred;">[PDF]</a> 
 									  <a href="https://mllm-failure-clustering.github.io/" style="color: darkred;">[Website]</a> 
-									  <a href="#" style="color: darkred;">[Video]</a> 
+									  <!-- <a href="#" style="color: darkred;">[Video]</a>  -->
 									  <a href="https://github.com/mllm-failure-clustering/failure_clustering" style="color: darkred;">[Code]</a>
 									</p>
-								  </div> -->
+								  </div>
 
 								<!-- <div>
 									
@@ -144,7 +146,7 @@
 								<div>
 									<p>
 									  <strong>Detecting and Mitigating System-Level Anomalies of Vision-Based Controllers</strong><br>
-									  <b>Aryaman Gupta</b>, Kaustav Chakraborty, Somil Bansal<br>
+									  <b>Aryaman Gupta*</b>, Kaustav Chakraborty*, Somil Bansal<br>
 									  IEEE International Conference on Robotics and Automation (ICRA), 2024 
 									  <a href="https://arxiv.org/pdf/2309.13475.pdf" style="color: darkred;">[PDF]</a> 
 									  <a href="FailureMitigation.html" style="color: darkred;">[Website]</a> 
@@ -249,6 +251,8 @@
 										<li><a href="#" class="button small">Code</a></li>
 									</ul>
 								</div> -->
+
+							*Equal Contribution
 
 							</section>
 
