--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 									<p>
 									  <strong>Detecting and Mitigating System-Level Anomalies of Vision-Based Controllers</strong><br>
 									  <b>Aryaman Gupta*</b>, Kaustav Chakraborty*, Somil Bansal<br>
-									  IEEE International Conference on Robotics and Automation (ICRA), 2024 
+									  IEEE International Conference on Robotics and Automation (ICRA), 2024<br>
 									  <a href="https://arxiv.org/pdf/2309.13475.pdf" style="color: darkred;">[PDF]</a> 
 									  <a href="FailureMitigation.html" style="color: darkred;">[Website]</a> 
 									  <a href="https://www.youtube.com/watch?v=Z9DtIEBrSvs&t=4s" style="color: darkred;">[Video]</a> 
@@ -181,8 +181,8 @@
 									<p>
 									  <strong>Enhancing Safety and Robustness of Vision-Based Controllers via Reachability Analysis</strong><br>
 									  Kaustav Chakraborty, <b>Aryaman Gupta</b>, Somil Bansal<br>
-									  arXiv, 2024 
-									  <a href="https://arxiv.org/pdf/2410.21736" style="color: darkred;">[PDF]</a> 
+									  arXiv, 2024<br>
+									  <a href="https://arxiv.org/pdf/2410.21736" style="color: darkred;">[PDF]</a>
 									  <a href="https://vatsuak.github.io/visual-failure-mitigation/" style="color: darkred;">[Website]</a>
 									  <a href="papers/tro_failure_mitigation/TRO_Final.mp4" style="color: darkred;">[Video]</a>
 									</p>
@@ -207,7 +207,7 @@
 									<p>
 									  <strong>Deep Reinforcement Learning for Sim-to-Real Policy Transfer of VTOL-UAVs Offshore Docking Operations</strong><br>
 									  Ali Mohamed Ali, <b>Aryaman Gupta</b>, Hashim A. Hashim<br>
-									  Applied Soft Computing Journal 
+									  Applied Soft Computing Journal<br> 
 									  <a href="https://www.sciencedirect.com/science/article/pii/S1568494624006173?ref=pdf_download&fr=RR-2&rr=89f67841391f91cd" style="color: darkred;">[PDF]</a> 
 									  <a href="DroneDocking.html" style="color: darkred;">[Website]</a> 
 									  <a href="https://github.com/phoenixrider12/drone_docking" style="color: darkred;">[Code]</a>
@@ -231,7 +231,7 @@
 									<p>
 									  <strong>Node Fault Prediction Assisted Small-World IoT Networks Using ML Frameworks: Towards Performance Improvement</strong><br>
 									  Neha Sharma, <b>Aryaman Gupta</b>, Sivala Deepak, Om Jee Pandey [Best Paper Award]<br>
-									  IEEE International Conference on Advanced Networks and Telecommunications Systems (ANTS), 2024
+									  IEEE International Conference on Advanced Networks and Telecommunications Systems (ANTS), 2024<br>
 									  <a href="https://ieeexplore.ieee.org/document/10898632" style="color: darkred;">[PDF]</a> 
 									  <a href="#" style="color: darkred;">[Website]</a> 
 									  <a href="#" style="color: darkred;">[Code]</a>
