--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 									<h2>News</h2>
 								</header>
 									<ul>
+										<li><b>[June 2025]</b> : Presented my <a href="https://www.arxiv.org/abs/2506.06570">paper</a> on MLLM-based failure interpretability at OOD Generalization and Robot Evaluation Workshops at RSS 2025.</li>
 										<li><b>[June 2025]</b> : New <a href="https://www.arxiv.org/abs/2506.06570">paper</a> on enhancing robot safety via MLLM-based semantic interpretation of failure data is out on arxiv.</li>
 										<li><b>[Jan 2025]</b> : Started Ph.D. in Aeronautics and Astronautics at Stanford University.</li>
 										<li><b>[Oct 2024]</b> : My paper on efficient data routing in small-world IoT networks got accepted into <b>IEEE ANTS 2024</b> and won <b>Best Paper Award</b>.</li>
